--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "babel-plugin-react-compiler": "1.0.0",
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5"
   }
 }
